# astronomy.rs

./: .env.example  Cargo.toml
migrations/2024-05-21-075658_astronauts/: down.sql  up.sql
migrations/2024-05-21-075800_galaxies/: down.sql  up.sql
src/: errors.rs  lib.rs  schema.rs
src/utils/: access_token.rs  database.rs  mod.rs  password.rs
