[package]
name = "astronomy"
version = "0.1.0"
edition = "2021"
authors = ["Ahmad Rifa'i"]
repository = "https://github.com/arifai/astronomy.rs"

[dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.6", features = ["postgres", "r2d2", "uuid"] }
dotenvy = "0.15.7"
ed25519 = { version = "2.2.3", features = ["pkcs8", "pem"] }
lazy_static = "1.4.0"
pasetors = "0.6.8"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
uuid = { version = "1.8.0", features = ["fast-rng", "v4"] }
